<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.SamtenByMe.FullscreenContainer"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/fullscreen_content_controls"
        style="@style/Widget.Theme.SamtenByMe.ButtonBar.Fullscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:ignore="UselessParent">

        <com.google.android.exoplayer2.ui.StyledPlayerView
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:use_controller="false"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <WebView
                android:id="@+id/webview_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                />

            <WebView
                android:id="@+id/webview_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linear_settings"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:id="@+id/btn_event_file"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:padding="10dp"-->
<!--                android:text="이벤트 설정 File 을 선택하세요"-->
<!--                android:focusable="true"-->
<!--                android:focusableInTouchMode="true"-->
<!--                app:useMaterialThemeColors="false"-->
<!--                app:backgroundTint="@android:color/transparent"-->
<!--                app:strokeWidth="4dp"-->
<!--                app:strokeColor="@drawable/btn_stroke_selector"-->
<!--                app:rippleColor="@android:color/transparent"-->
<!--            />-->



            <Button
                android:id="@+id/btn_event_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:layout_gravity="left"
                android:focusedByDefault="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@drawable/bg_round_white"
                android:textColor="@color/white"
                android:text="@string/select_event_config" />

            <Button
                android:id="@+id/btn_open"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="left"
                android:focusedByDefault="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@drawable/bg_round_white"
                android:textColor="@color/white"
                android:text="@string/select_mp4" />

            <CheckBox
                android:id="@+id/checkbox_url1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@drawable/bg_round_06141f"
                android:textColor="@color/white"
                android:text="@string/show_url1"/>
            <CheckBox
                android:id="@+id/checkbox_url2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@drawable/bg_round_06141f"
                android:textColor="@color/white"
                android:text="@string/show_url2"/>
            <CheckBox
                android:id="@+id/checkbox_reverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_round_06141f"
                android:textColor="@color/white"
                android:text="@string/web_reverse"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_landscape"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_gravity="left"
                    android:focusedByDefault="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:background="@drawable/bg_round_white"
                    android:textColor="@color/white"
                    android:text="@string/mode_landscape" />
                <Button
                    android:id="@+id/btn_portrait"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="left"
                    android:focusedByDefault="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:background="@drawable/bg_round_white"
                    android:textColor="@color/white"
                    android:text="@string/mode_portrait" />

                <Button
                    android:id="@+id/btn_reset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="left"
                    android:focusedByDefault="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:background="@drawable/bg_round_white"
                    android:textColor="@color/white"
                    android:text="@string/reset" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/text_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:background="@drawable/circle_bg"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:text="60"/>

    </RelativeLayout>

</RelativeLayout>